# azurenum

./: .gitignore  README.md  pyproject.toml  requirements.txt
azurenum/: azurenum.py
azurenum/enums/: administrative_units.py  app_api_permissions.py  authentication_methods.py  basic_info.py  conditional_access.py  cross_tenant_access.py  device_settings.py  devices.py  directory_roles.py  dynamic_groups.py  idp_federation.py  modifiable_groups.py  named_locations.py  pim_assignments.py  principal_properties.py  seamless_sso.py  sspr_settings.py  user_groups_settings.py
azurenum/utils/: api.py  args.py  auth.py  config.py  const.py  helper.py  output.py  printer.py  sessions.py
